@@ -7,492 +7,310 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.junit.jupiter.MockitoSettings;
-import org.mockito.quality.Strictness;
-import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.boundary.rest_server.AspirantePruebaResource.AspirantePruebaInput;
-import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.control.*;
-import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.entity.*;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.control.AspiranteDAO;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.control.AspirantePruebaDAO;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.control.PruebaDAO;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.entity.Aspirante;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.entity.AspirantePrueba;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.entity.Prueba;
 
-import java.util.Collections;
+import java.net.URI;
+import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@MockitoSettings(strictness = Strictness.LENIENT)
 class AspirantePruebaResourceTest {
 
-    private AspirantePruebaResource resource;
-    private AspirantePruebaDAO apDAO;
-    private AspiranteDAO aspiranteDAO;
-    private PruebaDAO pruebaDAO;
+    @Mock
+    AspirantePruebaDAO aspirantePruebaDAO;
+
+    @Mock
+    AspiranteDAO aspiranteDAO;
+
+    @Mock
+    PruebaDAO pruebaDAO;
+
+    @Mock
+    UriInfo uriInfo;
+
+    @Mock
+    UriBuilder uriBuilder;
+
+    @InjectMocks
+    AspirantePruebaResource resource;
+
+    private static final int FIRST = 0;
+    private static final int MAX = 10;
+    private static final int INVALIDFIRST = -1;
+    private static final int INVALIDMAX = 0;
+    private static final int EXCEEDMAX = 11;
+
+    private UUID idAspirante;
+    private UUID idPrueba;
+    private Aspirante aspirante;
+    private Prueba prueba;
+    private AspirantePrueba ap;
+    private AspirantePrueba entity;
 
     @BeforeEach
-    void setUp() {
-        resource = new AspirantePruebaResource();
-        apDAO = mock(AspirantePruebaDAO.class);
-        aspiranteDAO = mock(AspiranteDAO.class);
-        pruebaDAO = mock(PruebaDAO.class);
+    void setUp(){
+        idAspirante = UUID.randomUUID();
+        idPrueba = UUID.randomUUID();
 
-        resource.aspirantePruebaDAO = apDAO;
-        resource.aspiranteDAO = aspiranteDAO;
-        resource.pruebaDAO = pruebaDAO;
-    }
+        aspirante = new Aspirante();
+        aspirante.setId(idAspirante);
 
-    // helper para construir un input válido
-    private AspirantePruebaInput input(UUID idPrueba) {
-        AspirantePruebaInput i = new AspirantePruebaInput();
-        i.setIdPrueba(idPrueba);
-        return i;
+        prueba = new Prueba();
+        prueba.setId(idPrueba);
+
+        ap = new AspirantePrueba();
+        ap.setId(1);
+        ap.setIdAspirante(aspirante);
+        ap.setIdPrueba(prueba);
+
+        entity = new AspirantePrueba();
     }
 
     @Nested
-    class FindRange {
-
+    class FindRange{
         @Test
-        void retorna200_cuandoParametrosSonValidos() {
-            UUID idAspirante = UUID.randomUUID();
-            when(aspiranteDAO.findById(idAspirante)).thenReturn(new Aspirante());
-            when(apDAO.countByAspirante(idAspirante)).thenReturn(1L);
-            when(apDAO.findByAspirante(idAspirante, 0, 10)).thenReturn(Collections.emptyList());
+        void retorna200ConListaYHeader_cuandoParametrosSonValidos(){
+            when(aspiranteDAO.findById(idAspirante)).thenReturn(aspirante);
+            when(aspirantePruebaDAO.findByAspirante(idAspirante, FIRST, MAX)).thenReturn(List.of(ap));
+            when(aspirantePruebaDAO.count()).thenReturn(1);
 
-            Response r = resource.findRange(idAspirante, 0, 10);
+            Response resp = resource.findRange(idAspirante, FIRST, MAX);
 
-            assertEquals(200, r.getStatus());
-            assertEquals("1", r.getHeaderString("Total-records"));
+            assertEquals(200, resp.getStatus());
+            List<?> entidad = (List<?>) resp.getEntity();
+            assertEquals(1, entidad.size());
+            assertEquals("1", resp.getHeaderString("X-Total-Count"));
+            verify(aspiranteDAO).findById(idAspirante);
+            verify(aspirantePruebaDAO).findByAspirante(idAspirante, FIRST, MAX);
+            verify(aspirantePruebaDAO).count();
         }
 
         @Test
-        void retorna422_cuandoIdAspiranteEsNulo() {
-            Response r = resource.findRange(null, 0, 10);
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoIdAspiranteNulo(){
+            Response resp = resource.findRange(null, FIRST, MAX);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idAspirante", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspiranteDAO, aspirantePruebaDAO);
         }
 
         @Test
-        void retorna422_cuandoFirstEsNegativo() {
-            Response r = resource.findRange(UUID.randomUUID(), -1, 10);
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoFirstInvalido(){
+            Response resp = resource.findRange(idAspirante, INVALIDFIRST, MAX);
+            assertEquals(422, resp.getStatus());
+            assertEquals("first,max", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspiranteDAO, aspirantePruebaDAO);
         }
 
         @Test
-        void retorna422_cuandoMaxEsCero() {
-            Response r = resource.findRange(UUID.randomUUID(), 0, 0);
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoMaxInvalido(){
+            Response resp = resource.findRange(idAspirante, FIRST, INVALIDMAX);
+            assertEquals(422, resp.getStatus());
+            assertEquals("first,max", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspiranteDAO, aspirantePruebaDAO);
         }
 
         @Test
-        void retorna422_cuandoMaxExcedeLimite() {
-            Response r = resource.findRange(UUID.randomUUID(), 0, 101);
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoMaxExcedido(){
+            Response resp = resource.findRange(idAspirante, FIRST, EXCEEDMAX);
+            assertEquals(422, resp.getStatus());
+            assertEquals("first,max", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspiranteDAO, aspirantePruebaDAO);
         }
 
         @Test
-        void retorna404_cuandoAspiranteNoExiste() {
-            UUID idAspirante = UUID.randomUUID();
+        void retorna404_cuandoAspiranteNoExiste(){
             when(aspiranteDAO.findById(idAspirante)).thenReturn(null);
-
-            Response r = resource.findRange(idAspirante, 0, 10);
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoDAOLanzaExcepcion() {
-            UUID idAspirante = UUID.randomUUID();
-            when(aspiranteDAO.findById(idAspirante)).thenThrow(new RuntimeException());
-
-            Response r = resource.findRange(idAspirante, 0, 10);
-
-            assertEquals(500, r.getStatus());
+            Response resp = resource.findRange(idAspirante, FIRST, MAX);
+            assertEquals(404, resp.getStatus());
+            assertEquals("Aspirante with id " + idAspirante + " not found", resp.getHeaderString("Not-found-id"));
+            verify(aspiranteDAO).findById(idAspirante);
+            verifyNoMoreInteractions(aspirantePruebaDAO);
         }
     }
 
     @Nested
-    class FindById {
-
+    class FindOne{
         @Test
-        void retorna200_cuandoExiste() {
-            UUID idAspirante = UUID.randomUUID();
-            Aspirante aspirante = new Aspirante();
-            aspirante.setId(idAspirante);
-            AspirantePrueba ap = new AspirantePrueba();
-            ap.setIdAspirante(aspirante);
-
-            when(apDAO.findById(1)).thenReturn(ap);
-
-            Response r = resource.findById(idAspirante, 1);
-
-            assertEquals(200, r.getStatus());
+        void retorna200ConEntidad_cuandoExiste(){
+            when(aspirantePruebaDAO.findByAspirante(idAspirante, 0, Integer.MAX_VALUE)).thenReturn(List.of(ap));
+            Response resp = resource.findOne(idAspirante, idPrueba);
+            assertEquals(200, resp.getStatus());
+            assertEquals(ap, resp.getEntity());
+            verify(aspirantePruebaDAO).findByAspirante(idAspirante, 0, Integer.MAX_VALUE);
         }
 
         @Test
-        void retorna404_cuandoNoExiste() {
-            when(apDAO.findById(1)).thenReturn(null);
-
-            Response r = resource.findById(UUID.randomUUID(), 1);
-
-            assertEquals(404, r.getStatus());
+        void retorna422_cuandoIdAspiranteNulo(){
+            Response resp = resource.findOne(null, idPrueba);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idAspirante", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspirantePruebaDAO);
         }
 
         @Test
-        void retorna404_cuandoAspiranteMismatch() {
-            UUID idAspirante = UUID.randomUUID();
-            Aspirante otro = new Aspirante();
-            otro.setId(UUID.randomUUID());
-            AspirantePrueba ap = new AspirantePrueba();
-            ap.setIdAspirante(otro);
-
-            when(apDAO.findById(1)).thenReturn(ap);
-
-            Response r = resource.findById(idAspirante, 1);
-
-            assertEquals(404, r.getStatus());
+        void retorna422_cuandoIdPruebaNulo(){
+            Response resp = resource.findOne(idAspirante, null);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idPrueba", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspirantePruebaDAO);
         }
 
         @Test
-        void retorna422_cuandoAmbosNulos() {
-            Response r = resource.findById(null, null);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna422_cuandoIdPruebaEsNulo() {
-            Response r = resource.findById(UUID.randomUUID(), null);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna422_cuandoIdAspiranteEsNulo() {
-            Response r = resource.findById(null, 1);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoDAOLanzaExcepcion() {
-            when(apDAO.findById(1)).thenThrow(new RuntimeException());
-
-            Response r = resource.findById(UUID.randomUUID(), 1);
-
-            assertEquals(500, r.getStatus());
+        void retorna404_cuandoNoSeEncuentra(){
+            when(aspirantePruebaDAO.findByAspirante(idAspirante, 0, Integer.MAX_VALUE)).thenReturn(List.of());
+            Response resp = resource.findOne(idAspirante, idPrueba);
+            assertEquals(404, resp.getStatus());
+            assertEquals("AspirantePrueba with id prueba= " + idPrueba + ", aspirante=" + idAspirante + " not found",
+                    resp.getHeaderString("Not-found-id"));
+            verify(aspirantePruebaDAO).findByAspirante(idAspirante, 0, Integer.MAX_VALUE);
         }
     }
 
     @Nested
-    class Create {
-
+    class Create{
         @Test
-        void retorna201_cuandoCreacionExitosa() {
-            UUID idAspirante = UUID.randomUUID();
-            UUID idPrueba = UUID.randomUUID();
-
-            Aspirante aspirante = new Aspirante();
-            aspirante.setId(idAspirante);
-            Prueba prueba = new Prueba();
-            prueba.setId(idPrueba);
+        void retorna201_cuandoValido(){
+            entity.setId(null);
+            Prueba body = new Prueba();
+            body.setId(idPrueba);
+            entity.setIdPrueba(body);
 
             when(aspiranteDAO.findById(idAspirante)).thenReturn(aspirante);
             when(pruebaDAO.findById(idPrueba)).thenReturn(prueba);
+            when(uriInfo.getAbsolutePathBuilder()).thenReturn(uriBuilder);
+            when(uriBuilder.path(anyString())).thenReturn(uriBuilder);
+            when(uriBuilder.build()).thenReturn(URI.create("resources/v1/aspirante/" + idAspirante + "/prueba/" + idPrueba));
 
-            UriInfo uriInfo = mock(UriInfo.class);
-            when(uriInfo.getAbsolutePathBuilder())
-                    .thenReturn(UriBuilder.fromUri("http://localhost"));
+            doAnswer(inv -> {
+                entity.setId(99);
+                return null;
+            }).when(aspirantePruebaDAO).create(entity);
 
-            Response r = resource.create(idAspirante, input(idPrueba), uriInfo);
-
-            assertEquals(201, r.getStatus());
+            Response resp = resource.create(idAspirante, entity, uriInfo);
+            assertEquals(201, resp.getStatus());
+            verify(aspiranteDAO).findById(idAspirante);
+            verify(pruebaDAO).findById(idPrueba);
+            verify(aspirantePruebaDAO).create(entity);
         }
 
         @Test
-        void retorna422_cuandoIdAspiranteEsNulo() {
-            Response r = resource.create(null, input(UUID.randomUUID()), mock(UriInfo.class));
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoIdAspiranteNulo(){
+            Response resp = resource.create(null, entity, uriInfo);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idAspirante", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspiranteDAO, pruebaDAO, aspirantePruebaDAO);
         }
 
         @Test
-        void retorna422_cuandoInputEsNulo() {
-            // idAspirante != null pero input == null
-            Response r = resource.create(UUID.randomUUID(), null, mock(UriInfo.class));
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoEntidadNula(){
+            Response resp = resource.create(idAspirante, null, uriInfo);
+            assertEquals(422, resp.getStatus());
+            assertEquals("entity must not be null", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspiranteDAO, pruebaDAO, aspirantePruebaDAO);
         }
 
         @Test
-        void retorna422_cuandoIdPruebaEsNulo() {
-            // input != null pero idPrueba == null
-            Response r = resource.create(UUID.randomUUID(), input(null), mock(UriInfo.class));
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoEntityTieneId(){
+            entity.setId(5);
+            Response resp = resource.create(idAspirante, entity, uriInfo);
+            assertEquals(422, resp.getStatus());
+            assertEquals("entity.id must be null", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspiranteDAO, pruebaDAO, aspirantePruebaDAO);
         }
 
         @Test
-        void retorna404_cuandoAspiranteNoExiste() {
-            when(aspiranteDAO.findById(any())).thenReturn(null);
-
-            Response r = resource.create(UUID.randomUUID(), input(UUID.randomUUID()), mock(UriInfo.class));
-
-            assertEquals(404, r.getStatus());
+        void retorna422_cuandoIdPruebaNoProvistoEnBody(){
+            entity.setId(null);
+            entity.setIdPrueba(null);
+            Response resp = resource.create(idAspirante, entity, uriInfo);
+            assertEquals(422, resp.getStatus());
+            assertEquals("entity.idPrueba must be provided in body", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspiranteDAO, pruebaDAO, aspirantePruebaDAO);
         }
 
         @Test
-        void retorna404_cuandoPruebaNoExiste() {
-            UUID idAspirante = UUID.randomUUID();
-            UUID idPrueba = UUID.randomUUID();
+        void retorna404_cuandoAspiranteNoExiste(){
+            entity.setId(null);
+            Prueba body = new Prueba();
+            body.setId(idPrueba);
+            entity.setIdPrueba(body);
 
-            when(aspiranteDAO.findById(idAspirante)).thenReturn(new Aspirante());
-            when(pruebaDAO.findById(idPrueba)).thenReturn(null);
-
-            Response r = resource.create(idAspirante, input(idPrueba), mock(UriInfo.class));
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna409_cuandoHayDuplicateKey() {
-            UUID idAspirante = UUID.randomUUID();
-            UUID idPrueba = UUID.randomUUID();
-
-            when(aspiranteDAO.findById(idAspirante)).thenReturn(new Aspirante());
-            when(pruebaDAO.findById(idPrueba)).thenReturn(new Prueba());
-
-            UriInfo uriInfo = mock(UriInfo.class);
-            when(uriInfo.getAbsolutePathBuilder())
-                    .thenReturn(UriBuilder.fromUri("http://localhost"));
-
-            RuntimeException cause = new RuntimeException("duplicate key value violates unique constraint");
-            doThrow(new RuntimeException(cause)).when(apDAO).create(any());
-
-            Response r = resource.create(idAspirante, input(idPrueba), uriInfo);
-
-            assertEquals(409, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoExcepcionSinCause() {
-            UUID idAspirante = UUID.randomUUID();
-            UUID idPrueba = UUID.randomUUID();
-
-            when(aspiranteDAO.findById(idAspirante)).thenReturn(new Aspirante());
-            when(pruebaDAO.findById(idPrueba)).thenReturn(new Prueba());
-            doThrow(new RuntimeException("error")).when(apDAO).create(any());
-
-            Response r = resource.create(idAspirante, input(idPrueba), mock(UriInfo.class));
-
-            assertEquals(500, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoExcepcionSinMensaje() {
-            UUID idAspirante = UUID.randomUUID();
-            UUID idPrueba = UUID.randomUUID();
-
-            when(aspiranteDAO.findById(idAspirante)).thenReturn(new Aspirante());
-            when(pruebaDAO.findById(idPrueba)).thenReturn(new Prueba());
-            doThrow(new RuntimeException(new RuntimeException((String) null))).when(apDAO).create(any());
-
-            Response r = resource.create(idAspirante, input(idPrueba), mock(UriInfo.class));
-
-            assertEquals(500, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoDAOLanzaExcepcion() {
-            when(aspiranteDAO.findById(any())).thenThrow(new RuntimeException());
-
-            Response r = resource.create(UUID.randomUUID(), input(UUID.randomUUID()), mock(UriInfo.class));
-
-            assertEquals(500, r.getStatus());
-        }
-    }
-
-    @Nested
-    class Update {
-
-        private AspirantePrueba buildExisting(UUID idAspirante) {
-            Aspirante aspirante = new Aspirante();
-            aspirante.setId(idAspirante);
-            AspirantePrueba existing = new AspirantePrueba();
-            existing.setIdAspirante(aspirante);
-            existing.setIdPrueba(new Prueba());
-            return existing;
-        }
-
-        @Test
-        void retorna200_cuandoActualizaConNuevaPrueba() {
-            UUID idAspirante = UUID.randomUUID();
-            UUID idPrueba = UUID.randomUUID();
-            AspirantePrueba existing = buildExisting(idAspirante);
-
-            when(apDAO.findById(1)).thenReturn(existing);
-            when(aspiranteDAO.findById(idAspirante)).thenReturn(new Aspirante());
-            when(pruebaDAO.findById(idPrueba)).thenReturn(new Prueba());
-            when(apDAO.update(any())).thenReturn(new AspirantePrueba());
-
-            Response r = resource.update(idAspirante, 1, input(idPrueba));
-
-            assertEquals(200, r.getStatus());
-        }
-
-        @Test
-        void retorna200_cuandoInputSinPruebaConservaExistente() {
-            // input.getIdPrueba() == null → usa existing.getIdPrueba()
-            UUID idAspirante = UUID.randomUUID();
-            AspirantePrueba existing = buildExisting(idAspirante);
-
-            when(apDAO.findById(1)).thenReturn(existing);
-            when(aspiranteDAO.findById(idAspirante)).thenReturn(new Aspirante());
-            when(apDAO.update(any())).thenReturn(new AspirantePrueba());
-
-            Response r = resource.update(idAspirante, 1, input(null));
-
-            assertEquals(200, r.getStatus());
-        }
-
-        @Test
-        void retorna422_cuandoIdAspiranteEsNulo() {
-            Response r = resource.update(null, 1, input(UUID.randomUUID()));
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna422_cuandoIdPruebaEsNulo() {
-            // idPrueba del path == null
-            Response r = resource.update(UUID.randomUUID(), null, input(UUID.randomUUID()));
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna422_cuandoInputEsNulo() {
-            Response r = resource.update(UUID.randomUUID(), 1, null);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna404_cuandoExistingEsNulo() {
-            when(apDAO.findById(1)).thenReturn(null);
-
-            Response r = resource.update(UUID.randomUUID(), 1, input(UUID.randomUUID()));
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna404_cuandoAspiranteMismatch() {
-            UUID idAspirante = UUID.randomUUID();
-            AspirantePrueba existing = buildExisting(UUID.randomUUID()); // diferente
-
-            when(apDAO.findById(1)).thenReturn(existing);
-
-            Response r = resource.update(idAspirante, 1, input(UUID.randomUUID()));
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna404_cuandoAspiranteNoExisteEnBD() {
-            UUID idAspirante = UUID.randomUUID();
-            AspirantePrueba existing = buildExisting(idAspirante);
-
-            when(apDAO.findById(1)).thenReturn(existing);
             when(aspiranteDAO.findById(idAspirante)).thenReturn(null);
-
-            Response r = resource.update(idAspirante, 1, input(UUID.randomUUID()));
-
-            assertEquals(404, r.getStatus());
+            Response resp = resource.create(idAspirante, entity, uriInfo);
+            assertEquals(404, resp.getStatus());
+            assertEquals("Aspirante with id " + idAspirante + " not found", resp.getHeaderString("Not-found-id"));
+            verify(aspiranteDAO).findById(idAspirante);
+            verifyNoMoreInteractions(pruebaDAO, aspirantePruebaDAO);
         }
 
         @Test
-        void retorna404_cuandoPruebaNoExisteEnBD() {
-            UUID idAspirante = UUID.randomUUID();
-            UUID idPrueba = UUID.randomUUID();
-            AspirantePrueba existing = buildExisting(idAspirante);
+        void retorna404_cuandoPruebaNoExiste(){
+            entity.setId(null);
+            Prueba body = new Prueba();
+            body.setId(idPrueba);
+            entity.setIdPrueba(body);
 
-            when(apDAO.findById(1)).thenReturn(existing);
-            when(aspiranteDAO.findById(idAspirante)).thenReturn(new Aspirante());
+            when(aspiranteDAO.findById(idAspirante)).thenReturn(aspirante);
             when(pruebaDAO.findById(idPrueba)).thenReturn(null);
 
-            Response r = resource.update(idAspirante, 1, input(idPrueba));
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoDAOLanzaExcepcion() {
-            when(apDAO.findById(1)).thenThrow(new RuntimeException());
-
-            Response r = resource.update(UUID.randomUUID(), 1, input(UUID.randomUUID()));
-
-            assertEquals(500, r.getStatus());
+            Response resp = resource.create(idAspirante, entity, uriInfo);
+            assertEquals(404, resp.getStatus());
+            assertEquals("Prueba with id " + idPrueba + " not found", resp.getHeaderString("Not-found-id"));
+            verify(aspiranteDAO).findById(idAspirante);
+            verify(pruebaDAO).findById(idPrueba);
+            verifyNoMoreInteractions(aspirantePruebaDAO);
         }
     }
 
     @Nested
-    class Delete {
-
+    class Delete{
         @Test
-        void retorna204_cuandoEliminacionExitosa() {
-            UUID idAspirante = UUID.randomUUID();
-            Aspirante aspirante = new Aspirante();
-            aspirante.setId(idAspirante);
-            AspirantePrueba existing = new AspirantePrueba();
-            existing.setIdAspirante(aspirante);
-
-            when(apDAO.findById(1)).thenReturn(existing);
-
-            Response r = resource.delete(idAspirante, 1);
-
-            assertEquals(204, r.getStatus());
-            verify(apDAO).delete(existing);
+        void retorna204_cuandoValido(){
+            when(aspirantePruebaDAO.findByAspirante(idAspirante, 0, Integer.MAX_VALUE)).thenReturn(List.of(ap));
+            Response resp = resource.delete(idAspirante, idPrueba);
+            assertEquals(204, resp.getStatus());
+            verify(aspirantePruebaDAO).findByAspirante(idAspirante, 0, Integer.MAX_VALUE);
+            verify(aspirantePruebaDAO).delete(ap);
         }
 
         @Test
-        void retorna404_cuandoNoExiste() {
-            when(apDAO.findById(1)).thenReturn(null);
-
-            Response r = resource.delete(UUID.randomUUID(), 1);
-
-            assertEquals(404, r.getStatus());
+        void retorna422_cuandoIdAspiranteNulo(){
+            Response resp = resource.delete(null, idPrueba);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idAspirante", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspirantePruebaDAO);
         }
 
         @Test
-        void retorna404_cuandoAspiranteMismatch() {
-            UUID idAspirante = UUID.randomUUID();
-            Aspirante otro = new Aspirante();
-            otro.setId(UUID.randomUUID());
-            AspirantePrueba existing = new AspirantePrueba();
-            existing.setIdAspirante(otro);
-
-            when(apDAO.findById(1)).thenReturn(existing);
-
-            Response r = resource.delete(idAspirante, 1);
-
-            assertEquals(404, r.getStatus());
+        void retorna422_cuandoIdPruebaNulo(){
+            Response resp = resource.delete(idAspirante, null);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idPrueba", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(aspirantePruebaDAO);
         }
 
         @Test
-        void retorna422_cuandoAmbosNulos() {
-            Response r = resource.delete(null, null);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna422_cuandoIdPruebaEsNulo() {
-            Response r = resource.delete(UUID.randomUUID(), null);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna422_cuandoIdAspiranteEsNulo() {
-            Response r = resource.delete(null, 1);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoDAOLanzaExcepcion() {
-            when(apDAO.findById(1)).thenThrow(new RuntimeException());
-
-            Response r = resource.delete(UUID.randomUUID(), 1);
-
-            assertEquals(500, r.getStatus());
+        void retorna404_cuandoNoSeEncuentra(){
+            when(aspirantePruebaDAO.findByAspirante(idAspirante, 0, Integer.MAX_VALUE)).thenReturn(List.of());
+            Response resp = resource.delete(idAspirante, idPrueba);
+            assertEquals(404, resp.getStatus());
+            assertEquals("AspirantePrueba with id prueba= " + idPrueba + ", aspirante=" + idAspirante + " not found",
+                    resp.getHeaderString("Not-found-id"));
+            verify(aspirantePruebaDAO).findByAspirante(idAspirante, 0, Integer.MAX_VALUE);
         }
     }
 }
+
